fix logo text on small screens

--- a/styles/small.css
+++ b/styles/small.css
@@ -86,6 +86,10 @@ header {
   left: 30px;
 }
 
+#logo a {
+    text-decoration: none;
+}
+
 /*--> Mobile menu --*/
 /* Menu Icon */
 .menu-icon {
